[package]
name = "pingtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["async-attributes", "attributes"] }
chrono = "0.4.22"
clap = { version = "3.2.16", features = ["derive"] }
dns-lookup = "1.0.8"
futures = "0.3.23"
serde = { version = "1.0.143", features = ["serde_derive"] }
serde_json = "1.0.83"
tabled = "0.8.0"
winping = "0.10.1"
